--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "front-end":"npm start --prefix front-end",
     "dev":"concurrently \"nodemon server\" \"npm run front-end\"",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
